fix(html): Fixed register.html
- change frontend/pages/login.html to login.html

--- a/project/frontend/pages/register.html
+++ b/project/frontend/pages/register.html
@@ -32,7 +32,7 @@
             <button type="submit">Send</button>
 
             <p class="switch">
-                <a href="frontend/pages/login.html">I have account!</a>
+                <a href="login.html">I have account!</a>
             </p>
         </form>
     </div>
